@@ -4,6 +4,7 @@ NEWS
 New since 1.9.1:
 
 * cups.Connection.getPrinterAttributes()
+* cups.Connection.setPrinterJobSheets()
 
 New since 1.9.0:
 
